fixed spacing on the process page

--- a/portfolio.css
+++ b/portfolio.css
@@ -144,6 +144,27 @@ p{
     margin-left: 500px;
     margin-top: 200px;
 }
+#column7{
+    float:left;
+    width:20%;
+}
+#column8{
+    float:left;
+    width:20%;
+}
+#column9{
+    float:left;
+    width:20%;
+}
+#column10{
+    float:left;
+    width:20%;
+}
+#column11{
+    float:left;
+    width:20%;
+}
+
 #intro{
     margin-top: 110px;
     margin-bottom: 110px;
@@ -154,8 +175,20 @@ p{
 #introduction{
     height: 800px;
     width: auto;
-    margin-top: 200px;
+    margin-top: 250px;
     margin-bottom: 200px;
     margin-left: 100px;
     text-align: left;
+}
+.processrow{
+    height: 800px;
+    width: auto;
+    margin-top: 200px;
+    margin-bottom: 200px;
+    margin-left: 100px;
+    text-align: center;   
+}
+#processbox{
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
